--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,9 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
             <!-- Font Awesome Icons -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        
+          <!-- Fonts -->
+          <link href='https://fonts.googleapis.com/css?family=Changa One' rel='stylesheet'>
+          <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
         {% block page_head %}
             <!-- <link rel="stylesheet" href="{% static '' %}"> -->
         {% endblock %}
