--- a/templates/website/components/footer.html
+++ b/templates/website/components/footer.html
@@ -1,32 +1,30 @@
 {% load static %}
 </br></br>
-<footer style="background-color: #000000;">
+<footer style="background-color: #E3E0FE;">
     </br>
     <div class="container">
         <section>
 
             <div class="row">
 
-                <div class="col text-start">
-                    <span><code>GitHub</code> <a target="_blank" href="https://github.com/reybritez/opama-lapaciencia"><i class="fa-brands fa-github fa-lg"></i></a></span>
+                <div class="col text-start p-4">
+                    <span><code class="text-opama">GitHub</code> <a target="_blank" href="https://github.com/reybritez/opama-lapaciencia"><i class="fa-brands fa-github fa-lg"></i></a></span>
                     <br><br>
-                    <span><code>Media</code> <a target="_blank" href="{% url 'content:opama_lucho_benitez' %}"><i class="fa-brands fa-youtube fa-lg"></i></a></span>
+                    <span><code class="text-opama pt-5">Media</code> <a target="_blank" href="{% url 'content:opama_lucho_benitez' %}"><i class="fa-brands fa-youtube fa-lg"></i></a></span>
                     <br><br>
-                    <span><a target="_blank" href="/sitemap.xml"><code>SiteMap</code> <i class="fa-solid fa-earth-africa"></i></a></span>
+                    <span><a target="_blank" href="/sitemap.xml"><code class="text-opama">SiteMap</code> <i class="fa-solid fa-earth-africa"></i></a></span>
                 </div>
 
-                <div class="col text-end">
-                    <a href="#"><img class="center" src="{% static 'images/photos/bus_fantasma.jpg' %}" width="200" height="90"></a>
+                <div class="col text-end" >
+                    <a href="#"><img class="center p-2" width="60" height="160" src="{% static 'images/photos/bus_fantasma.jpg' %}" ></a>
                 </div>
 
             </div>
 
             <div class="text-center">
                 <small class="text-light">
-                    <p>🐍Django & ⚛️React Base |  Made Whit Love by <a target="_blank" href="https://reybritez.com/"> Steven Rey</a>  © Copyright <span id="copyright-year"></span></p>
+                    <p class="text-opama"   >🐍Django & ⚛️React | by <a target="_blank" href="https://github.com/reybritez/opama-lapaciencia"> OPAMA</a> </p>
                     <script>document.getElementById('copyright-year').innerText = (new Date()).getFullYear();</script>
-                    <!-- Please Accredit my website in your project -->
-                    <b class="text-success"> Opama La Paciencia v0.22.22</b> | <a target="_blank" href="https://growth-delta.com/"> Gracias a Growth Delta</a>
                 </small>
             </div>
 
